--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-camera": "^0.13.0",
     "react-native-keyboard-aware-scroll-view": "^0.4.1",
     "react-native-qrcode-scanner": "0.0.29",
+    "react-native-responsive-dimensions": "^1.0.2",
     "react-native-side-menu": "^1.1.3",
     "react-native-ui-kitten": "^2.0.1",
     "react-native-vector-icons": "^4.4.2",
